--- a/program/assignments.qmd
+++ b/program/assignments.qmd
@@ -74,7 +74,6 @@ TBD
 1. Modify the evaluation script to create a [Comet](https://www.comet.com/site/?utm_source=svpino_course&utm_medium=partner&utm_content=github) experiment to track the metrics and the confusion matrix computed on the test data. You'll need to include a `requirements.txt` file with the `comet_ml` library as part of the Processing Step. SageMaker will use this file to install the library in the processing container before starting the processing job.
 
 
-
 ### Chapter 7 - Registering the Model
 
 1. Modify the model registration process to register the model using `PendingManualApproval` as its approval status. Ensure you can approve the model manually from the Model Registry.
@@ -101,13 +100,25 @@ TBD
 1. We logged the model's assets in [Comet](https://www.comet.com/site/?utm_source=svpino_course&utm_medium=partner&utm_content=github) as part of the training script. We want to create a new step to register the model in Comet's Model Registry. We can [register the model using Comet's SDK](https://www.comet.com/docs/v2/guides/model-management/using-model-registry/#register-a-model-from-the-sdk) from a [Lambda Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-lambda). We can reference the experiment containing the model assets using the `PIPELINE_EXECUTION_ID` execution variable.
 
 
-### Chapter 9 - Deploying the Model 
+### Chapter 9 - Serving the Model
+
+1. TBD: Use FastAPI to do the same.
+1. TBD: Use TensorFlow Serving to do the same.
+1. TBD: Modify the interface to expect a JSON object instead of processed data. How can we use the transformation pipeline here?
+1. TBD: Modify the script with a new function to realod the model in memory. this is helpful to upgrade the model without stopping the flask app
+1. Perform post-training quantization of the model before running the Flask application. The goal is to use TensorFlow Lite to run a smaller, optimized version of the model. Check [Post-training dynamic range quantization](https://www.tensorflow.org/lite/performance/post_training_quant) for an example on how to quantize the model.
+
+
+### Chapter 10 - Deploying the Model 
 
 1. Every SageMaker endpoint has an invocation URL you can use to generate predictions with the model from outside AWS. Write a simple Python script that runs on your local computer and sends a few samples to the endpoint. You will need your AWS access key and secret to connect to the endpoint.
 
+1. IDEA: Expose the endpoint using an API Gateway and Lambda function. This way, you can create a simple REST API to generate predictions with the model.
 
 
-### Chapter 10 - Deploying From the Pipeline
+
+
+### Chapter 11 - Deploying From the Pipeline
 
 1. We can use model variants to perform A/B testing between a new model and an old model. Create a function that given the ARN of two models in the Model Registry deploys them to an endpoint as separate variants. Each variant should receive 50% of the traffic. Write another function that invokes the endpoint by default, but allows the caller to invoke a specific variant if they want to.
 
@@ -117,19 +128,33 @@ TBD
 
 
 
-### Chapter 11 - Deploying From an Event
+### Chapter 12 - Deploying From an Event
 
 1. TBD
 
 
 
-### Chapter 12 - Building an Inference Pipeline
+### Chapter 13 - Building an Inference Pipeline
 
 1. Using the boto3's [`describe_model_package()`](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker/client/describe_model_package.html) function, compare the `InferenceSpecification` of the pipeline model with the `InferenceSpecification` of the basic model we created before. Notice how the pipeline model lists the three different containers we used to build the inference pipeline.
+
+
+
+### Chapter 14 - Data Quality Baseline
+
+1. TBD
 
 
 
 ### Additional SageMaker Capabilities
 
 1. Familiarize yourself with the [Amazon SageMaker Ground Truth](https://aws.amazon.com/sagemaker/data-labeling/) service and set up a simple "Text Classification (Multi-label)" labeling job. 
+
+
+IDEAS:
+
+- Create a chapter to deploy custom Docker container
+- Redesign AWS diagrams
+- Finish setup instructions
+- Whenever I build the inference pipeline I should compare the containers (3) from the model with the previous model (1 container)
 
