Fixed issue with image_uri of regular training job

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -2224,10 +2224,7 @@
     "        {\"Name\": \"val_loss\", \"Regex\": \"val_loss: ([0-9\\\\.]+)\"},\n",
     "        {\"Name\": \"val_accuracy\", \"Regex\": \"val_accuracy: ([0-9\\\\.]+)\"},\n",
     "    ],\n",
-    "    # image_uri=config[\"image\"],\n",
-    "    \n",
-    "    image_uri=\"keras-custom-training-container\",\n",
-    "\n",
+    "    image_uri=config[\"image\"],\n",
     "    framework_version=config[\"framework_version\"],\n",
     "    py_version=config[\"py_version\"],\n",
     "    instance_type=config[\"instance_type\"],\n",
