We are now always using lunux/amd64 when not Local Mode

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -6607,19 +6607,17 @@
     "\n",
     "IMAGE_NAME = \"keras-custom-training-container\"\n",
     "\n",
-    "if IS_ARM64_ARCHITECTURE and not LOCAL_MODE:\n",
-    "    # If we are running this code on an ARM64 architecture\n",
-    "    # (Apple Silicon), we need specify we want to build the\n",
-    "    # Docker image for the AMD64 architecture before \n",
-    "    # uploading it to ECR.\n",
+    "if not LOCAL_MODE:\n",
+    "    # If we aren't running the code in Local Mode, we need \n",
+    "    # to specify we want to build the Docker image for the\n",
+    "    # linux/amd64 architecture before uploading it to ECR.\n",
     "    print(\"Building Docker image for linux/amd64 architecture...\")\n",
     "\n",
     "    !docker build --platform=\"linux/amd64\" -t $IMAGE_NAME \\\n",
     "        $CODE_FOLDER/containers/training/\n",
     "else:\n",
-    "    # If we aren't running on an ARM64 architecture, or we\n",
-    "    # are running in Local Mode, we can use the default Docker\n",
-    "    # build command.\n",
+    "    # If we are running in Local Mode, we can use the\n",
+    "    # default Docker build command.\n",
     "    print(\"Building Docker image for arm64 architecture...\")\n",
     "\n",
     "    !docker build -t $IMAGE_NAME \\\n",
@@ -6733,39 +6731,13 @@
    "id": "55bb421b",
    "metadata": {},
    "source": [
-    "We can now create an [Estimator](https://sagemaker.readthedocs.io/en/stable/api/training/estimators.html) to run the Training Job. This Estimator will use the custom image we built."
+    "We can now create an [Estimator](https://sagemaker.readthedocs.io/en/stable/api/training/estimators.html) and a [Training Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-training) using the function we created before. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 551,
    "id": "f4e17204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sagemaker.estimator import Estimator\n",
-    "\n",
-    "keras_estimator = Estimator(\n",
-    "    image_uri=training_container_image,\n",
-    "    instance_count=1,\n",
-    "    instance_type=config[\"instance_type\"],\n",
-    "    sagemaker_session=config[\"session\"],\n",
-    "    role=role,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16bee67a",
-   "metadata": {},
-   "source": [
-    "Finally, we can create a [Training Step](https://docs.aws.amazon.com/sagemaker/latest/dg/build-and-manage-steps.html#step-type-training) using the function we created before. This time, we'll use the [Estimator](https://sagemaker.readthedocs.io/en/stable/api/training/estimators.html) pointing to the custom Docker image we built."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 548,
-   "id": "328af547",
    "metadata": {},
    "outputs": [
     {
@@ -6780,6 +6752,16 @@
    "source": [
     "# | code: true\n",
     "# | output: false\n",
+    "\n",
+    "from sagemaker.estimator import Estimator\n",
+    "\n",
+    "keras_estimator = Estimator(\n",
+    "    image_uri=training_container_image,\n",
+    "    instance_count=1,\n",
+    "    instance_type=config[\"instance_type\"],\n",
+    "    sagemaker_session=config[\"session\"],\n",
+    "    role=role,\n",
+    ")\n",
     "\n",
     "keras_train_model_step = create_training_step(keras_estimator)"
    ]
